# Vibes-Pro

./: .coderabbit.yaml  .copierignore  .editorconfig  .envrc.example  .eslintignore  .eslintrc.json  .eslintrc.precommit.cjs  .gitignore  .markdownlint.json  .mise.toml  .pre-commit-config.yaml  .secrets.env.sops  .secrets.env.sops.example  .sops.yaml  AGENT-MAP.md  AGENT-SYSTEM.md  AGENTS.md  AGENTS.md.j2  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  MPL-2.0.txt  PHASE-4-CLEANUP-SUMMARY.md  README.md  _template_AGENTS.md  _template_pyproject.toml  copier.yml  copier.yml.backup  debug-test.js  debug_generator_conversion.py  dev_prd.md  devbox.json  eslint.config.cjs  jest.config.json  jest.d.ts  jest.setup.js  justfile  justfile.clean  justfile.j2  (+15 more)
apps/observe-smoke/: Cargo.toml  README.md
apps/observe-smoke/src/: main.rs
crates/vibepro-observe/: Cargo.toml
crates/vibepro-observe/src/: lib.rs
crates/vibepro-observe/tests/: otlp_gates.rs  otlp_integration.rs  tracing_init.rs  tracing_vector.rs
templates/{{project_slug}}/: .env  .markdownlint.json  .mise.toml.j2  Cargo.toml  Cargo.toml.j2  Dockerfile  Dockerfile.j2  MIGRATION-FROM-HEXDDD.md.j2  README.md.j2  devbox.json.j2  docker-compose.yml.j2  jest.preset.js.j2  justfile.j2  justfile.template.j2  nx.json.j2  package.json  package.json.j2  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyproject.toml.j2  tsconfig.base.json.j2  tsconfig.json  uv.lock.j2
templates/{{project_slug}}/.github/: AGENT.md  CODEOWNERS  copilot-instructions.md  copilot-instructions.md.j2  models.yaml  pull_request_template.md
templates/{{project_slug}}/.github/chatmodes/: debug.fix.chatmode.md  debug.isolate.chatmode.md  debug.refactor.chatmode.md  debug.regress.chatmode.md  debug.repro.chatmode.md  debug.start.chatmode.md  devops.audit.chatmode.md  devops.deployment.chatmode.md  generator-spec.chatmode.md  meta.customize-instructions.chatmode.md  onboarding.overview.chatmode.md  persona.navigator.chatmode.md  persona.qa.chatmode.md  persona.senior-backend.chatmode.md  persona.senior-frontend.chatmode.md  persona.system-architect.chatmode.md  persona.ux-ui-designer.chatmode.md  persona.ux-ui.chatmode.md  planning.plan.chatmode.md  platform.target-platforms.chatmode.md  product.elevator-pitch.chatmode.md  product.features-list.chatmode.md  product.manager.chatmode.md  product.problem-statement.chatmode.md  product.target-audience.chatmode.md  product.usp.chatmode.md  sec.analyst.chatmode.md  spec.lean.chatmode.md  spec.nfr.chatmode.md  spec.wide.chatmode.md  tdd-plan.chatmode.md  tdd-tbd.chatmode.md  tdd.red.chatmode.md
templates/{{project_slug}}/.github/instructions/: ai-workflows.constitution.instructions.md  ai-workflows.instructions.md  commit-msg.instructions.md  context.instructions.md  general.instructions.md  generators-first.instructions.md  nx.instructions.md  performance.instructions.md  security.instructions.md  style.frontend.instructions.md  style.python.instructions.md  testing.instructions.md
templates/{{project_slug}}/.github/prompts/: customize.copilot-instructions.prompt.md  debug.workflow.prompt.md  docs.generate.prompt.md  generator-spec.prompt.md  perf.analyze.prompt.md  platform.bootstrap.prompt.md  project.describe-context.prompt.md  sec.review.prompt.md  spec-housekeeping.prompt.md  spec.change.prompt.md  spec.feature.template.md  spec.implement.prompt.md  spec.items.load.prompt.md  spec.plan.adr.prompt.md  spec.plan.prd.prompt.md  spec.plan.sds.prompt.md  spec.plan.task.prompt.md  spec.plan.ts.prompt.md  spec.tasks.template.md  spec.traceability.update.prompt.md  spec.transcript.to-devspec.prompt.md  speckit_merge.prompt.md.j2  tdd-plan.prompt.md  tdd-tbd.prompt.md  tdd.workflow.prompt.md  test-hardening.prompt.md  tool.techstack.sync.prompt.md  ui.react.create-component.prompt.md  vibecoder-debug.prompt.md  vibecoder-tdd.prompt.md
templates/{{project_slug}}/.github/workflows/: agent-link-check.yml.j2  ai-generate.yml.j2  ai-guidance.yml.j2  build-matrix.yml.j2  ci.yml.j2  docs-generator.yml.j2  env-check.yml.j2  generation-smoke-tests.yml.j2  integration-tests.yml.j2  markdownlint.yml  markdownlint.yml.j2  node-tests.yml  node-tests.yml.j2  security-scan.yml.j2  semgrep.yml.j2  spec-guard.yml  spec-guard.yml.j2
templates/{{project_slug}}/apps/: README.md
templates/{{project_slug}}/apps/{{app_name}}/: next.config.js  next.config.js.j2  project.json.j2
templates/{{project_slug}}/docs/: README.md  README.md.j2  commit_message_guidelines.md.j2  dev_adr.md.j2  dev_implementation_plan.md  dev_prd.md  dev_prd.md.j2  dev_sds.md  dev_sds.md.j2  dev_spec_index.md.j2  dev_technical-specifications.md  dev_technical-specifications.md.j2  ideation-insights.md  mapping.md  markdownlint.md  migration-from-yaml.md  prd.md.j2  sds.md.j2  spec_index.md.j2  techstack.schema copy.json  template_structure_analysis.md  traceability_matrix.md.j2  vibecoder_integration_plan.md
templates/{{project_slug}}/docs/_includes/: env_vars.md.j2
templates/{{project_slug}}/docs/explanation/: 01_system_architecture.md  02_vibepro_workflow.md
templates/{{project_slug}}/docs/how-to/: 01_add_new_technology.md  ai-onboarding.md  ai-onboarding.md.j2  refine-project-context.md
templates/{{project_slug}}/docs/observability/: logging.md.j2
templates/{{project_slug}}/docs/partials/: _metadata_header  _metadata_header.j2
templates/{{project_slug}}/docs/reference/: 01_just_commands.md  02_techstack_yaml_format.md  03_ai_prompts_and_chatmodes.md  README.md
templates/{{project_slug}}/docs/security/: ENCRYPTION.md  ENCRYPTION.md.j2
templates/{{project_slug}}/docs/specs/: adr.md  adr.md.j2  prd.md  (+8 more)
templates/{{project_slug}}/hooks/: post_gen.py  post_gen.py.j2
templates/{{project_slug}}/mcp/: example-http.tool.md  tool_index.md
templates/{{project_slug}}/scripts/: bundle-context.sh  devbox_boot.sh.j2  run_prompt.sh  spec_feature.sh
templates/{{project_slug}}/temporal_db/: AGENT.md.j2  README.md.j2  lib.rs.j2  repository.rs.j2  schema.rs.j2
templates/{{project_slug}}/tools/: __init__.py  check_agent_links.py
(+958 files in other folders)
