[package]
name = "VibesPro"
version = "0.1.0"
edition = "2024"

[dependencies]
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
vibes_pro_security = { path = "libs/security", package = "security" }
tempfile = "3.9"

[[test]]
name = "validation_suite"
path = "tests/security/validation_suite.rs"
