[package]
name = "vibepro-observe"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "VibePro: Rust-native observability helpers (tracing → OTLP)"

[features]
# Enable OTLP exporter (gRPC) when you want to export spans to Vector/OpenObserve.
# Keep default minimal for near-zero overhead without exporter.
otlp = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "tracing-opentelemetry"]

[dependencies]
anyhow = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = { version = "0.32", optional = true }

# Only built when `--features otlp` is enabled
# Updated to OpenTelemetry 0.31+ for compatibility with modern tooling
opentelemetry = { version = "0.31", optional = true, default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.31", optional = true, default-features = false, features = ["grpc-tonic", "http-proto", "reqwest-client", "trace"] }
opentelemetry_sdk = { version = "0.31", optional = true, default-features = false, features = ["trace", "rt-tokio"] }

# Test/dev
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
fake-opentelemetry-collector = "0.32"
