[package]
name = "My_project"
version = "0.1.0"
edition = "2024"

[lib]
name = "my_project"
path = "temporal_db/lib.rs"

[dependencies]
redb = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
md5 = "0.7"

[dev-dependencies]
my_project_security = { path = "libs/security", package = "security" }
tempfile = "3.9"

[[test]]
name = "validation_suite"
path = "tests/security/validation_suite.rs"
